<resources>
    <string name="app_name"></string>
    <string name="app_title">UNION</string>
    <string name="app_sub_title">Class Enrollment</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="image_landing_activity">This is image in landing activity</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="class_enrollment">Class Enrollment</string>
    <string name="profile">Profile</string>
    <string name="year_movie">Year: %s</string>
    <string name="genre_movie">Genre: %s</string>
    <string name="rating_movie">Rating: %s</string>
</resources>