<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabMode="fixed" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:background="@color/backgroud"
        android:clickable="true"
        android:focusable="true">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_marginTop="216dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/background_image"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/middle_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/detail_movie_thumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/netflix_profile"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/background_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/detail_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_movie_thumbnail"
            tools:text="Title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Year: 2022"
            android:text="@string/year_movie"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/detail_movie_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Genre: Action"
            android:text="@string/genre_movie"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/movie_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:text="Rating: 4.5"
            android:text="@string/rating_movie"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/movie_genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>